[gd_scene load_steps=47 format=3 uid="uid://xd42l4o82cgh"]

[ext_resource type="Script" path="res://Scripts/HonorWarrior/fps_player_scipt.gd" id="1_j3nuh"]
[ext_resource type="Texture2D" uid="uid://d1ymdco3e3fpa" path="res://Assets/HonorWarrior/NOW THIS IS A LOGO.png" id="2_crobs"]
[ext_resource type="Script" path="res://Scripts/Shake.gd" id="3_onmg1"]
[ext_resource type="FontFile" uid="uid://drvdhc3yawmlj" path="res://Assets/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" id="3_qtlan"]
[ext_resource type="Texture2D" uid="uid://u4f5ocf4gqan" path="res://Assets/HonorWarrior/Player/hands.png" id="3_r0bcw"]
[ext_resource type="Texture2D" uid="uid://dxxqklttpx4hx" path="res://Assets/HonorWarrior/under.png" id="4_ak5xe"]
[ext_resource type="Texture2D" uid="uid://chk2sg88w2n5h" path="res://Assets/HonorWarrior/health.png" id="4_hokp2"]
[ext_resource type="Texture2D" uid="uid://y1s1msv8bem4" path="res://Assets/HonorWarrior/FaceStuff/Outline.png" id="4_l4uta"]
[ext_resource type="Texture2D" uid="uid://bxjq5311u6a6m" path="res://Assets/HonorWarrior/FaceStuff/The Face.png" id="5_7atry"]
[ext_resource type="Texture2D" uid="uid://bxew8q53m5dj" path="res://Assets/HonorWarrior/crosshair.png" id="5_wpp0m"]
[ext_resource type="Shader" path="res://Assets/Shaders/node_3d2.gdshader" id="6_e3wb0"]
[ext_resource type="Texture2D" uid="uid://kt6xqjdid11u" path="res://Assets/HonorWarrior/FaceStuff/Blood spray 1.png" id="6_xqqng"]
[ext_resource type="Texture2D" uid="uid://ck2fqjt6hce4t" path="res://Assets/HonorWarrior/FaceStuff/Eyes.png" id="7_gq4n3"]
[ext_resource type="AudioStream" uid="uid://dyqp4r2q3g647" path="res://Assets/SFX/snow_crunch.ogg" id="10_cne58"]
[ext_resource type="AudioStream" uid="uid://3do67w7vq3hm" path="res://Assets/SFX/pistol.wav" id="11_jq1yl"]
[ext_resource type="Texture2D" uid="uid://ds0lh1xf2nxhb" path="res://Assets/HonorWarrior/light.png" id="11_q1qfa"]
[ext_resource type="Texture2D" uid="uid://cfp1td5ekbv6h" path="res://Assets/HonorWarrior/Player/hand-disk.png" id="11_ut86q"]
[ext_resource type="AudioStream" uid="uid://cxvxq765tonv5" path="res://Assets/SFX/08_Step_rock_02.wav" id="14_urmmc"]
[ext_resource type="AudioStream" uid="uid://nhl17lxc0hjd" path="res://Assets/SFX/wood_step.ogg" id="15_3ml7s"]
[ext_resource type="AudioStream" uid="uid://dqrht2e0dyncg" path="res://Assets/SFX/you_damaged.ogg" id="15_ycapp"]
[ext_resource type="AudioStream" uid="uid://ddn0sb1sc7hl7" path="res://Assets/SFX/you_healed.ogg" id="16_kx272"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_22lb8"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_vlg8h"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_vscmq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/GunAnchor/GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/GunAnchor/GunSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(252, -255)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/GunAnchor/Light:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kxp3h"]
resource_name = "gun_walking"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/GunAnchor/GunSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(252, -255), Vector2(252, -231)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_step_sound"
}]
}

[sub_resource type="Animation" id="Animation_x2xjm"]
resource_name = "shoot"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/GunAnchor/GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"glow_the_shot"
}, {
"args": [],
"method": &"glow_the_shot"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/GunAnchor/Light:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wo1ij"]
_data = {
"RESET": SubResource("Animation_vscmq"),
"gun_walking": SubResource("Animation_kxp3h"),
"shoot": SubResource("Animation_x2xjm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wff1a"]
animation = &"shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0rveq"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qicub"]
animation = &"gun_walking"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_allp1"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_75ydc"]
filters = ["HUD/GunAnchor/GunSprite:frame"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_3wpc1"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_qicub")
nodes/Animation/position = Vector2(-140, 100)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_wff1a")
"nodes/Animation 2/position" = Vector2(-380, 240)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_0rveq")
"nodes/Animation 3/position" = Vector2(-420, 360)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_allp1")
nodes/Blend2/position = Vector2(60, 120)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_75ydc")
nodes/OneShot/position = Vector2(-140, 260)
node_connections = [&"output", 0, &"Blend2", &"Blend2", 0, &"Animation", &"Blend2", 1, &"OneShot", &"OneShot", 0, &"Animation 3", &"OneShot", 1, &"Animation 2"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7ytc1"]

[sub_resource type="Gradient" id="Gradient_anrgj"]
offsets = PackedFloat32Array(0, 0.695341, 0.964158)
colors = PackedColorArray(0.678431, 0.0666667, 0.188235, 0.0522388, 0.678431, 0.0666667, 0.188235, 0.0874716, 0.678431, 0.0666667, 0.188235, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b1yjy"]
gradient = SubResource("Gradient_anrgj")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tor3o"]
bg_color = Color(0.176471, 0.117647, 0.0823529, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.12549, 0.0823529, 0.0509804, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yaeh"]
atlas = ExtResource("3_r0bcw")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bafpn"]
atlas = ExtResource("3_r0bcw")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_op4ji"]
atlas = ExtResource("3_r0bcw")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvk8g"]
atlas = ExtResource("3_r0bcw")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_fwq8s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yaeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bafpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op4ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvk8g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nsga2"]
shader = ExtResource("6_e3wb0")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.1
shader_parameter/scanlines_width = 0.277
shader_parameter/grille_opacity = 0.095
shader_parameter/resolution = Vector2(1000, 1000)
shader_parameter/pixelate = true
shader_parameter/roll = false
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 0.1
shader_parameter/distort_intensity = 0.009
shader_parameter/noise_opacity = 0.371
shader_parameter/noise_speed = 0.142
shader_parameter/static_noise_intensity = 0.085
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.048
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.455
shader_parameter/vignette_opacity = 0.316

[sub_resource type="LabelSettings" id="LabelSettings_oj2n8"]
font_color = Color(0.831373, 0.219608, 0.117647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mo8mr"]
font_color = Color(0.831373, 0.219608, 0.117647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ukcyw"]
font_color = Color(0.831373, 0.219608, 0.117647, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_j3nuh")
eyes_texture = ExtResource("7_gq4n3")
level = "SNOWLANDS"

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.195135, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_22lb8")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.195135, 0)
shape = SubResource("ConvexPolygonShape3D_vlg8h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wo1ij")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_3wpc1")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Blend2/blend_amount = 1.0
parameters/OneShot/active = false
parameters/OneShot/request = 0

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.478361, -0.163748)

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0121272, 0.00621888)
current = true
script = ExtResource("3_onmg1")
noise = SubResource("FastNoiseLite_7ytc1")

[node name="BulletRay" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0672503, 0)
target_position = Vector3(0, 0, -20)
collision_mask = 5

[node name="LookingRay" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0609429, 0)
target_position = Vector3(0, 0, -30)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="BloodTexture" type="TextureRect" parent="HUD/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_b1yjy")

[node name="ColorRect" type="ColorRect" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
color = Color(0.172549, 0.188235, 0.313726, 1)

[node name="Label" type="Label" parent="HUD/Control/ColorRect"]
layout_mode = 0
offset_left = 33.0
offset_top = 1.0
offset_right = 243.0
offset_bottom = 27.0
text = "BLASTIN WARRIOR"
vertical_alignment = 1

[node name="Panel" type="Panel" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -105.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_tor3o")

[node name="TextureRect" type="TextureRect" parent="HUD/Control/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = -70.0
offset_right = 173.0
offset_bottom = 92.0
grow_vertical = 2
texture = ExtResource("2_crobs")
expand_mode = 1

[node name="Stuff" type="HBoxContainer" parent="HUD/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -45.5
offset_right = 83.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Level" type="VBoxContainer" parent="HUD/Control/Panel/Stuff"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HUD/Control/Panel/Stuff/Level"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HUD/Control/Panel/Stuff/Level"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "SNOWLANDS"
horizontal_alignment = 1

[node name="Weapon" type="VBoxContainer" parent="HUD/Control/Panel/Stuff"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HUD/Control/Panel/Stuff/Weapon"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "WEAPON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HUD/Control/Panel/Stuff/Weapon"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "PISTOL"
horizontal_alignment = 1

[node name="Health" type="VBoxContainer" parent="HUD/Control/Panel/Stuff"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HUD/Control/Panel/Stuff/Health"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "HEALTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="TextureProgressBar" parent="HUD/Control/Panel/Stuff/Health"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
fill_mode = 3
texture_under = ExtResource("4_ak5xe")
texture_progress = ExtResource("4_hokp2")

[node name="Task" type="VBoxContainer" parent="HUD/Control/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -39.5
offset_bottom = 39.5
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="HUD/Control/Panel/Task"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "TASK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HUD/Control/Panel/Task"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qtlan")
theme_override_font_sizes/font_size = 31
text = "KILL"
horizontal_alignment = 1

[node name="GunAnchor" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0

[node name="Light" type="Sprite2D" parent="HUD/GunAnchor"]
visible = false
modulate = Color(0.854902, 0.247059, 0.145098, 0.501961)
z_index = -1
z_as_relative = false
texture_filter = 1
position = Vector2(137.496, -293.496)
scale = Vector2(3.672, 3.672)
texture = ExtResource("11_q1qfa")

[node name="GunSprite" type="AnimatedSprite2D" parent="HUD/GunAnchor"]
texture_filter = 1
position = Vector2(252, -255)
sprite_frames = SubResource("SpriteFrames_fwq8s")

[node name="DiskSprite" type="Sprite2D" parent="HUD/GunAnchor"]
visible = false
position = Vector2(117, -234)
rotation = -0.0837758
texture = ExtResource("11_ut86q")

[node name="Outline" type="Sprite2D" parent="HUD/GunAnchor"]
texture_filter = 1
position = Vector2(439, -199)
scale = Vector2(2.96875, 2.96875)
texture = ExtResource("4_l4uta")

[node name="Face" type="TextureRect" parent="HUD/GunAnchor/Outline"]
clip_children = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_7atry")

[node name="Ignore" type="Sprite2D" parent="HUD/GunAnchor/Outline/Face"]
position = Vector2(-43.7895, -39.7474)
texture = ExtResource("6_xqqng")

[node name="Eyes" type="Sprite2D" parent="HUD/GunAnchor/Outline"]
texture_filter = 1
texture = ExtResource("7_gq4n3")
hframes = 3

[node name="Crosshair" type="TextureRect" parent="HUD"]
modulate = Color(0.0980392, 0.117647, 0.243137, 0.682353)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_wpp0m")
expand_mode = 1

[node name="Chat" type="VBoxContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -629.0
offset_right = 379.0
offset_bottom = -111.0
grow_vertical = 0
alignment = 2

[node name="TextureRect" type="ColorRect" parent="HUD"]
z_index = 1
material = SubResource("ShaderMaterial_nsga2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="HUD/TextureRect"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 1.0
offset_bottom = 27.0
grow_horizontal = 0
text = "Player-12 PC VIDEO FEED"
label_settings = SubResource("LabelSettings_oj2n8")
uppercase = true

[node name="Label2" type="Label" parent="HUD/TextureRect"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 19.0
offset_bottom = 45.0
grow_horizontal = 0
text = "MICROPHONE AUDIO: 100%"
label_settings = SubResource("LabelSettings_mo8mr")
horizontal_alignment = 2

[node name="Label4" type="Label" parent="HUD/TextureRect"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 38.0
offset_bottom = 64.0
grow_horizontal = 0
text = "SYSTEM AUDIO: 100%"
label_settings = SubResource("LabelSettings_mo8mr")
horizontal_alignment = 2

[node name="Label3" type="Label" parent="HUD/TextureRect"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.0
offset_top = 57.0
offset_bottom = 83.0
grow_horizontal = 0
text = "DELAY: 1 sec"
label_settings = SubResource("LabelSettings_ukcyw")
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="SnowStep" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_cne58")
volume_db = -8.0

[node name="RockStep" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_urmmc")
volume_db = -3.0
bus = &"New Bus 2"

[node name="WoodStep" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_3ml7s")
volume_db = -3.0
bus = &"New Bus 2"

[node name="Gun" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_jq1yl")
volume_db = -7.0

[node name="GunReverb" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_jq1yl")
volume_db = -7.0
bus = &"New Bus 2"

[node name="damage" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_ycapp")
volume_db = -5.0

[node name="heal" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_kx272")
volume_db = -6.0

[node name="ShotLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.525649, -1.23437)
visible = false
light_color = Color(0.85098, 0.486275, 0.184314, 1)
light_energy = 3.0
omni_range = 5.03671

[node name="UntilDelayChange" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="UntilDelayChangeAgain" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="UntilDelayChange" to="." method="_on_until_delay_change_timeout"]
[connection signal="timeout" from="UntilDelayChangeAgain" to="." method="_on_until_delay_change_again_timeout"]
